bk_ida/gccida/c3/convert_regs_entry
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/reg-stack.c:2850:1: error: unknown type name 'block_info_0'; did you mean 'block_info'?
block_info_0 bi_0; // [rsp+18h] [rbp-38h] 
^~~~~~~~~~~~
block_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/reg-stack.c:202:4: note: 'block_info' declared here
} *block_info;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/reg-stack.c:2852:1: error: unknown type name 'block_info_0'; did you mean 'block_info'?
block_info_0 bi; // [rsp+30h] [rbp-20h] 
^~~~~~~~~~~~
block_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/reg-stack.c:202:4: note: 'block_info' declared here
} *block_info;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/reg-stack.c:2862:8: error: use of undeclared identifier 'block_info_0'
bi = ( block_info_0)block->aux; 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/reg-stack.c:2874:10: error: use of undeclared identifier 'block_info_0'
bi_0 = ( block_info_0)e->dest->aux; 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/convert_regs_entry/src/obj/reg-stack.o] Error 1
